tests/examples/bad/wrong_braces.php
<?php
/**
 *
 * @file
 * @version 2.11
 * @copyright 2020 CN-Consult GmbH
 * @author Daniel Haas <daniel.haas@cn-consult.eu>
 */


for ($i=0; $i<10; $i++) {
	echo "Hello world!";
}

if (true) {
	echo "True is true";
} else {
	echo "True is false!?";
}

foreach ($a as $b) {
	echo "This is wrong also!";
}

while ($a=true) {
	echo "new lines are also for whiles!";
}